src/main/java/com/khubla/antlr4example/ExpressionParser.java
// Generated from Expression.g4 by ANTLR 4.7.1
package com.khubla.antlr4example;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class ExpressionParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		LOWERID=1, UPPERID=2, STRING=3, NUMBER=4, DEF=5, ID=6, IF=7, THEN=8, ELIF=9, 
		ELSE=10, CASE=11, LET=12, IN=13, DEFEQ=14, SEMICOLON=15, LPAREN=16, RPAREN=17, 
		LAMBDA=18, PIPE=19, ARROW=20, AND=21, OR=22, NOT=23, EQ=24, NE=25, GE=26, 
		LE=27, GT=28, LT=29, PLUS=30, MINUS=31, TIMES=32, DIV=33, MOD=34, NL=35, 
		SPACE=36, CHAR=37;
	public static final int
		RULE_parse = 0, RULE_definicion = 1, RULE_parametros = 2, RULE_expresion = 3, 
		RULE_expresionExterna = 4, RULE_expresionIf = 5, RULE_ramasElse = 6, RULE_expresionCase = 7, 
		RULE_ramasCase = 8, RULE_ramaCase = 9, RULE_expresionLet = 10, RULE_expresionLambda = 11, 
		RULE_expresionInterna = 12, RULE_operadorBinario = 13, RULE_operadorUnario = 14, 
		RULE_expresionAplicacion = 15, RULE_expresionAtomica = 16;
	public static final String[] ruleNames = {
		"parse", "definicion", "parametros", "expresion", "expresionExterna", 
		"expresionIf", "ramasElse", "expresionCase", "ramasCase", "ramaCase", 
		"expresionLet", "expresionLambda", "expresionInterna", "operadorBinario", 
		"operadorUnario", "expresionAplicacion", "expresionAtomica"
	};

	private static final String[] _LITERAL_NAMES = {
		null, null, null, null, null, "'def'", null, "'if'", "'then'", "'elif'", 
		"'else'", "'case'", "'let'", "'in'", "'='", "';'", "'('", "')'", "'\\'", 
		"'|'", "'->'", "'&&'", "'||'", "'!'", "'=='", "'!='", "'>='", "'<='", 
		"'>'", "'<'", "'+'", "'-'", "'*'", "'/'", "'%'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, "LOWERID", "UPPERID", "STRING", "NUMBER", "DEF", "ID", "IF", "THEN", 
		"ELIF", "ELSE", "CASE", "LET", "IN", "DEFEQ", "SEMICOLON", "LPAREN", "RPAREN", 
		"LAMBDA", "PIPE", "ARROW", "AND", "OR", "NOT", "EQ", "NE", "GE", "LE", 
		"GT", "LT", "PLUS", "MINUS", "TIMES", "DIV", "MOD", "NL", "SPACE", "CHAR"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Expression.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public ExpressionParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ParseContext extends ParserRuleContext {
		public DefinicionContext definicion() {
			return getRuleContext(DefinicionContext.class,0);
		}
		public TerminalNode EOF() { return getToken(ExpressionParser.EOF, 0); }
		public ParseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parse; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExpressionListener ) ((ExpressionListener)listener).enterParse(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExpressionListener ) ((ExpressionListener)listener).exitParse(this);
		}
	}

	public final ParseContext parse() throws RecognitionException {
		ParseContext _localctx = new ParseContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_parse);
		try {
			setState(38);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case DEF:
				enterOuterAlt(_localctx, 1);
				{
				setState(34);
				definicion();
				setState(35);
				match(EOF);
				}
				break;
			case EOF:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DefinicionContext extends ParserRuleContext {
		public TerminalNode DEF() { return getToken(ExpressionParser.DEF, 0); }
		public TerminalNode LOWERID() { return getToken(ExpressionParser.LOWERID, 0); }
		public ParametrosContext parametros() {
			return getRuleContext(ParametrosContext.class,0);
		}
		public TerminalNode DEFEQ() { return getToken(ExpressionParser.DEFEQ, 0); }
		public ExpresionContext expresion() {
			return getRuleContext(ExpresionContext.class,0);
		}
		public DefinicionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_definicion; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExpressionListener ) ((ExpressionListener)listener).enterDefinicion(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExpressionListener ) ((ExpressionListener)listener).exitDefinicion(this);
		}
	}

	public final DefinicionContext definicion() throws RecognitionException {
		DefinicionContext _localctx = new DefinicionContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_definicion);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(40);
			match(DEF);
			setState(41);
			match(LOWERID);
			setState(42);
			parametros();
			setState(43);
			match(DEFEQ);
			setState(44);
			expresion();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ParametrosContext extends ParserRuleContext {
		public TerminalNode LOWERID() { return getToken(ExpressionParser.LOWERID, 0); }
		public ParametrosContext parametros() {
			return getRuleContext(ParametrosContext.class,0);
		}
		public ParametrosContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parametros; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExpressionListener ) ((ExpressionListener)listener).enterParametros(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExpressionListener ) ((ExpressionListener)listener).exitParametros(this);
		}
	}

	public final ParametrosContext parametros() throws RecognitionException {
		ParametrosContext _localctx = new ParametrosContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_parametros);
		try {
			setState(49);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case LOWERID:
				enterOuterAlt(_localctx, 1);
				{
				setState(46);
				match(LOWERID);
				setState(47);
				parametros();
				}
				break;
			case DEFEQ:
			case ARROW:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExpresionContext extends ParserRuleContext {
		public ExpresionExternaContext expresionExterna() {
			return getRuleContext(ExpresionExternaContext.class,0);
		}
		public TerminalNode SEMICOLON() { return getToken(ExpressionParser.SEMICOLON, 0); }
		public ExpresionContext expresion() {
			return getRuleContext(ExpresionContext.class,0);
		}
		public ExpresionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expresion; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExpressionListener ) ((ExpressionListener)listener).enterExpresion(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExpressionListener ) ((ExpressionListener)listener).exitExpresion(this);
		}
	}

	public final ExpresionContext expresion() throws RecognitionException {
		ExpresionContext _localctx = new ExpresionContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_expresion);
		try {
			setState(56);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(51);
				expresionExterna();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(52);
				expresionExterna();
				setState(53);
				match(SEMICOLON);
				setState(54);
				expresion();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExpresionExternaContext extends ParserRuleContext {
		public ExpresionIfContext expresionIf() {
			return getRuleContext(ExpresionIfContext.class,0);
		}
		public ExpresionCaseContext expresionCase() {
			return getRuleContext(ExpresionCaseContext.class,0);
		}
		public ExpresionLetContext expresionLet() {
			return getRuleContext(ExpresionLetContext.class,0);
		}
		public ExpresionLambdaContext expresionLambda() {
			return getRuleContext(ExpresionLambdaContext.class,0);
		}
		public ExpresionInternaContext expresionInterna() {
			return getRuleContext(ExpresionInternaContext.class,0);
		}
		public ExpresionExternaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expresionExterna; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExpressionListener ) ((ExpressionListener)listener).enterExpresionExterna(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExpressionListener ) ((ExpressionListener)listener).exitExpresionExterna(this);
		}
	}

	public final ExpresionExternaContext expresionExterna() throws RecognitionException {
		ExpresionExternaContext _localctx = new ExpresionExternaContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_expresionExterna);
		try {
			setState(63);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case IF:
				enterOuterAlt(_localctx, 1);
				{
				setState(58);
				expresionIf();
				}
				break;
			case CASE:
				enterOuterAlt(_localctx, 2);
				{
				setState(59);
				expresionCase();
				}
				break;
			case LET:
				enterOuterAlt(_localctx, 3);
				{
				setState(60);
				expresionLet();
				}
				break;
			case LAMBDA:
				enterOuterAlt(_localctx, 4);
				{
				setState(61);
				expresionLambda();
				}
				break;
			case LOWERID:
			case UPPERID:
			case STRING:
			case NUMBER:
			case LPAREN:
			case NOT:
			case MINUS:
			case CHAR:
				enterOuterAlt(_localctx, 5);
				{
				setState(62);
				expresionInterna(0);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExpresionIfContext extends ParserRuleContext {
		public TerminalNode IF() { return getToken(ExpressionParser.IF, 0); }
		public List<ExpresionInternaContext> expresionInterna() {
			return getRuleContexts(ExpresionInternaContext.class);
		}
		public ExpresionInternaContext expresionInterna(int i) {
			return getRuleContext(ExpresionInternaContext.class,i);
		}
		public TerminalNode THEN() { return getToken(ExpressionParser.THEN, 0); }
		public RamasElseContext ramasElse() {
			return getRuleContext(RamasElseContext.class,0);
		}
		public ExpresionIfContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expresionIf; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExpressionListener ) ((ExpressionListener)listener).enterExpresionIf(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExpressionListener ) ((ExpressionListener)listener).exitExpresionIf(this);
		}
	}

	public final ExpresionIfContext expresionIf() throws RecognitionException {
		ExpresionIfContext _localctx = new ExpresionIfContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_expresionIf);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(65);
			match(IF);
			setState(66);
			expresionInterna(0);
			setState(67);
			match(THEN);
			setState(68);
			expresionInterna(0);
			setState(69);
			ramasElse();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RamasElseContext extends ParserRuleContext {
		public TerminalNode ELIF() { return getToken(ExpressionParser.ELIF, 0); }
		public List<ExpresionInternaContext> expresionInterna() {
			return getRuleContexts(ExpresionInternaContext.class);
		}
		public ExpresionInternaContext expresionInterna(int i) {
			return getRuleContext(ExpresionInternaContext.class,i);
		}
		public TerminalNode THEN() { return getToken(ExpressionParser.THEN, 0); }
		public RamasElseContext ramasElse() {
			return getRuleContext(RamasElseContext.class,0);
		}
		public TerminalNode ELSE() { return getToken(ExpressionParser.ELSE, 0); }
		public RamasElseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ramasElse; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExpressionListener ) ((ExpressionListener)listener).enterRamasElse(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExpressionListener ) ((ExpressionListener)listener).exitRamasElse(this);
		}
	}

	public final RamasElseContext ramasElse() throws RecognitionException {
		RamasElseContext _localctx = new RamasElseContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_ramasElse);
		try {
			setState(79);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case ELIF:
				enterOuterAlt(_localctx, 1);
				{
				setState(71);
				match(ELIF);
				setState(72);
				expresionInterna(0);
				setState(73);
				match(THEN);
				setState(74);
				expresionInterna(0);
				setState(75);
				ramasElse();
				}
				break;
			case ELSE:
				enterOuterAlt(_localctx, 2);
				{
				setState(77);
				match(ELSE);
				setState(78);
				expresionInterna(0);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExpresionCaseContext extends ParserRuleContext {
		public TerminalNode CASE() { return getToken(ExpressionParser.CASE, 0); }
		public ExpresionInternaContext expresionInterna() {
			return getRuleContext(ExpresionInternaContext.class,0);
		}
		public RamasCaseContext ramasCase() {
			return getRuleContext(RamasCaseContext.class,0);
		}
		public ExpresionCaseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expresionCase; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExpressionListener ) ((ExpressionListener)listener).enterExpresionCase(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExpressionListener ) ((ExpressionListener)listener).exitExpresionCase(this);
		}
	}

	public final ExpresionCaseContext expresionCase() throws RecognitionException {
		ExpresionCaseContext _localctx = new ExpresionCaseContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_expresionCase);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(81);
			match(CASE);
			setState(82);
			expresionInterna(0);
			setState(83);
			ramasCase();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RamasCaseContext extends ParserRuleContext {
		public RamaCaseContext ramaCase() {
			return getRuleContext(RamaCaseContext.class,0);
		}
		public RamasCaseContext ramasCase() {
			return getRuleContext(RamasCaseContext.class,0);
		}
		public RamasCaseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ramasCase; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExpressionListener ) ((ExpressionListener)listener).enterRamasCase(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExpressionListener ) ((ExpressionListener)listener).exitRamasCase(this);
		}
	}

	public final RamasCaseContext ramasCase() throws RecognitionException {
		RamasCaseContext _localctx = new RamasCaseContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_ramasCase);
		try {
			setState(89);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case PIPE:
				enterOuterAlt(_localctx, 1);
				{
				setState(85);
				ramaCase();
				setState(86);
				ramasCase();
				}
				break;
			case EOF:
			case SEMICOLON:
			case RPAREN:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RamaCaseContext extends ParserRuleContext {
		public TerminalNode PIPE() { return getToken(ExpressionParser.PIPE, 0); }
		public TerminalNode UPPERID() { return getToken(ExpressionParser.UPPERID, 0); }
		public ParametrosContext parametros() {
			return getRuleContext(ParametrosContext.class,0);
		}
		public TerminalNode ARROW() { return getToken(ExpressionParser.ARROW, 0); }
		public ExpresionInternaContext expresionInterna() {
			return getRuleContext(ExpresionInternaContext.class,0);
		}
		public RamaCaseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ramaCase; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExpressionListener ) ((ExpressionListener)listener).enterRamaCase(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExpressionListener ) ((ExpressionListener)listener).exitRamaCase(this);
		}
	}

	public final RamaCaseContext ramaCase() throws RecognitionException {
		RamaCaseContext _localctx = new RamaCaseContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_ramaCase);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(91);
			match(PIPE);
			setState(92);
			match(UPPERID);
			setState(93);
			parametros();
			setState(94);
			match(ARROW);
			setState(95);
			expresionInterna(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExpresionLetContext extends ParserRuleContext {
		public TerminalNode LET() { return getToken(ExpressionParser.LET, 0); }
		public TerminalNode ID() { return getToken(ExpressionParser.ID, 0); }
		public ParametrosContext parametros() {
			return getRuleContext(ParametrosContext.class,0);
		}
		public TerminalNode DEFEQ() { return getToken(ExpressionParser.DEFEQ, 0); }
		public ExpresionInternaContext expresionInterna() {
			return getRuleContext(ExpresionInternaContext.class,0);
		}
		public TerminalNode IN() { return getToken(ExpressionParser.IN, 0); }
		public ExpresionExternaContext expresionExterna() {
			return getRuleContext(ExpresionExternaContext.class,0);
		}
		public ExpresionLetContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expresionLet; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExpressionListener ) ((ExpressionListener)listener).enterExpresionLet(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExpressionListener ) ((ExpressionListener)listener).exitExpresionLet(this);
		}
	}

	public final ExpresionLetContext expresionLet() throws RecognitionException {
		ExpresionLetContext _localctx = new ExpresionLetContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_expresionLet);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(97);
			match(LET);
			setState(98);
			match(ID);
			setState(99);
			parametros();
			setState(100);
			match(DEFEQ);
			setState(101);
			expresionInterna(0);
			setState(102);
			match(IN);
			setState(103);
			expresionExterna();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExpresionLambdaContext extends ParserRuleContext {
		public TerminalNode LAMBDA() { return getToken(ExpressionParser.LAMBDA, 0); }
		public ParametrosContext parametros() {
			return getRuleContext(ParametrosContext.class,0);
		}
		public TerminalNode ARROW() { return getToken(ExpressionParser.ARROW, 0); }
		public ExpresionExternaContext expresionExterna() {
			return getRuleContext(ExpresionExternaContext.class,0);
		}
		public ExpresionLambdaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expresionLambda; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExpressionListener ) ((ExpressionListener)listener).enterExpresionLambda(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExpressionListener ) ((ExpressionListener)listener).exitExpresionLambda(this);
		}
	}

	public final ExpresionLambdaContext expresionLambda() throws RecognitionException {
		ExpresionLambdaContext _localctx = new ExpresionLambdaContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_expresionLambda);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(105);
			match(LAMBDA);
			setState(106);
			parametros();
			setState(107);
			match(ARROW);
			setState(108);
			expresionExterna();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExpresionInternaContext extends ParserRuleContext {
		public ExpresionAplicacionContext expresionAplicacion() {
			return getRuleContext(ExpresionAplicacionContext.class,0);
		}
		public OperadorUnarioContext operadorUnario() {
			return getRuleContext(OperadorUnarioContext.class,0);
		}
		public List<ExpresionInternaContext> expresionInterna() {
			return getRuleContexts(ExpresionInternaContext.class);
		}
		public ExpresionInternaContext expresionInterna(int i) {
			return getRuleContext(ExpresionInternaContext.class,i);
		}
		public OperadorBinarioContext operadorBinario() {
			return getRuleContext(OperadorBinarioContext.class,0);
		}
		public ExpresionInternaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expresionInterna; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExpressionListener ) ((ExpressionListener)listener).enterExpresionInterna(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExpressionListener ) ((ExpressionListener)listener).exitExpresionInterna(this);
		}
	}

	public final ExpresionInternaContext expresionInterna() throws RecognitionException {
		return expresionInterna(0);
	}

	private ExpresionInternaContext expresionInterna(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		ExpresionInternaContext _localctx = new ExpresionInternaContext(_ctx, _parentState);
		ExpresionInternaContext _prevctx = _localctx;
		int _startState = 24;
		enterRecursionRule(_localctx, 24, RULE_expresionInterna, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(115);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case LOWERID:
			case UPPERID:
			case STRING:
			case NUMBER:
			case LPAREN:
			case CHAR:
				{
				setState(111);
				expresionAplicacion(0);
				}
				break;
			case NOT:
			case MINUS:
				{
				setState(112);
				operadorUnario();
				setState(113);
				expresionInterna(1);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			_ctx.stop = _input.LT(-1);
			setState(123);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,7,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new ExpresionInternaContext(_parentctx, _parentState);
					pushNewRecursionContext(_localctx, _startState, RULE_expresionInterna);
					setState(117);
					if (!(precpred(_ctx, 2))) throw new FailedPredicateException(this, "precpred(_ctx, 2)");
					setState(118);
					operadorBinario();
					setState(119);
					expresionInterna(3);
					}
					} 
				}
				setState(125);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,7,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class OperadorBinarioContext extends ParserRuleContext {
		public TerminalNode AND() { return getToken(ExpressionParser.AND, 0); }
		public TerminalNode OR() { return getToken(ExpressionParser.OR, 0); }
		public TerminalNode EQ() { return getToken(ExpressionParser.EQ, 0); }
		public TerminalNode NE() { return getToken(ExpressionParser.NE, 0); }
		public TerminalNode GE() { return getToken(ExpressionParser.GE, 0); }
		public TerminalNode LE() { return getToken(ExpressionParser.LE, 0); }
		public TerminalNode GT() { return getToken(ExpressionParser.GT, 0); }
		public TerminalNode LT() { return getToken(ExpressionParser.LT, 0); }
		public TerminalNode PLUS() { return getToken(ExpressionParser.PLUS, 0); }
		public TerminalNode MINUS() { return getToken(ExpressionParser.MINUS, 0); }
		public TerminalNode TIMES() { return getToken(ExpressionParser.TIMES, 0); }
		public TerminalNode DIV() { return getToken(ExpressionParser.DIV, 0); }
		public TerminalNode MOD() { return getToken(ExpressionParser.MOD, 0); }
		public OperadorBinarioContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_operadorBinario; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExpressionListener ) ((ExpressionListener)listener).enterOperadorBinario(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExpressionListener ) ((ExpressionListener)listener).exitOperadorBinario(this);
		}
	}
